minor fix to navbar dropdown spacing

--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ input[type=checkbox] {
     position: absolute; /*WITH RESPECT TO PARENT*/
     display: none;
     /*border-radius: 8px;*/
-    top: 10vmin;
+    top: 12vmin;
     left: -50%;
 }
 
